--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dart-sass": "^1.25.0",
+    "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
@@ -19,6 +21,8 @@
   "devDependencies": {
     "css-loader": "^4.3.0",
     "html-webpack-plugin": "^4.4.1",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.1",
     "mini-css-extract-plugin": "^0.11.1",
     "webpack-dev-server": "^3.11.0"
   }
