--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "dart-sass": "^1.25.0",
+    "file-loader": "^6.1.0",
     "sass-loader": "^10.0.2",
-    "style-loader": "^1.2.1",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^3.0.2",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   },
@@ -24,6 +26,7 @@
     "less": "^3.12.2",
     "less-loader": "^7.0.1",
     "mini-css-extract-plugin": "^0.11.1",
+    "style-loader": "^1.2.1",
     "webpack-dev-server": "^3.11.0"
   }
 }
